--- a/tmux.conf
+++ b/tmux.conf
@@ -10,31 +10,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Define my custom menu bar
-# status bar colors
-set -g status-bg black
-set -g status-fg white
-
-# alignment settings
-set-option -g status-justify centre
-
-# status left options
-set-option -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[fg=green]]'
-set-option -g status-left-length 20
-
-# window list options
-setw -g automatic-rename on
-set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
-set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg=blue,fg=cyan]:#[fg=colour230]#W#[fg=dim]#F'
-set -g base-index 1
-
-# status right options
-set -g status-right '#[fg=green][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]  #($HOME/bin/battery)#[fg=green]]'
-
+# kill current pane/window
+bind-key q confirm-before kill-pane
+bind-key Q confirm-before kill-window
 
 # bind a reload key
 bind R source-file ~/.tmux.conf \; display-message "  Config reloaded..".
-
 
 # Set Copy-Mode settings
 bind [ copy-mode
@@ -42,3 +23,28 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 bind -t vi-copy V rectangle-toggle
 bind ] paste-buffer
+
+# alignment settings
+# set-option -g status-justify centre
+
+set -g status-bg colour234
+set -g window-status-activity-attr bold
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
+set -g message-fg colour16
+set -g message-bg colour221
+set -g message-attr bold
+
+# Custom status bar
+# Powerline symbols: ⮂ ⮃ ⮀ ⮁ ⭤
+set -g status-left-length 32
+set -g status-right-length 150
+set -g status-interval 5
+
+# set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour238,nobold]⮀#[fg=colour15,bg=colour238,bold] #(ls ~/.mail/yusuf.mahdi@gmail.com/INBOX/cur  ~/.mail/yusuf.mahdi@gmail.com/INBOX/new | wc -l | tr -d " ") #[fg=colour238,bg=colour234,nobold]⮀'
+
+set -g status-right '#[fg=colour245]⮃ %R ⮃ %d %b #[fg=colour254,bg=colour234,nobold]#(rdio-current-track-tmux)⮂#[fg=colour16,bg=colour254,bold] #h '
+
+set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour16,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
+
